[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-verification-env"
version = "0.1.0"
description = "OpenEnv-compatible RL environment for invoice verification"
authors = [{ name = "Invoice Verification Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "gradio",
    "openai",
    "openenv-core[core]>=0.2.2",
    "pydantic",
    "requests",
    "uvicorn",
]

[project.scripts]
server = "api.main:main"

[tool.setuptools.packages.find]
include = ["api*", "env*"]
